--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 50px;
-  background: #cdc2d8;
+  background: #eccfd7;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
