--- a/src/components/Header/HireTalent.module.css
+++ b/src/components/Header/HireTalent.module.css
@@ -1,4 +1,8 @@
-.hireTalentPage h1 {
+.hireTalentPage h1{
+  color: #333;
+  text-align: center;
+}
+.hireTalentPage h2{
   color: #333;
   text-align: center;
 }.hireTalentPage p {
@@ -18,16 +22,15 @@
   background-color: #f0f0f0; /* Add background color */
   border-radius: 4px; /* Add rounded corners */
 }.browseButton {
-  margin-top: 20px;
+  margin-top: 40px;
   padding: 10px 20px;
-  display: flex;           /* Enable flexbox layout */
-  flex-direction: row;  /* Align items vertically */
-  align-items: center;    /* Center items horizontally */
   background-color: #007bff;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  display: block;  /* Add this to make it a block-level element */
+  margin: 0 auto;  /* Add this to center the button horizontally */
 }.profilesGrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
